# zona-igr

./: .env.example  .gitignore  README.md  bun.lockb  docker-compose.yml  index.html  package.json  pyproject.toml  vite.config.ts
apps/api/: urls.py
apps/post/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/post/management/commands/: seed.py
apps/post/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_slug.py
apps/user/: admin.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/user/management/commands/: admin.py
apps/user/migrations/: 0001_initial.py  0002_alter_customuser_options.py
core/: middleware.py  settings.py  urls.py
core/settings/: base.py  dev.py
src/: App.vue  main.ts
src/api/: index.ts
src/assets/scss/: style.scss
src/components/: NavBar.vue  Post.vue
src/components/modal/: LoginModal.vue  RegisterModal.vue
src/components/post/: GenresList.vue
src/router/: index.ts  routes.ts
src/services/: AuthService.ts  UserService.ts
src/stores/: auth.store.ts  comment.store.ts  index.ts  post.store.ts  user.store.ts
src/stores/types/: post.types.ts  user.types.ts
src/utils/: auth.ts  cookies.ts  helpers.ts
src/utils/api/: http.ts
src/views/: HomeView.vue  PostsView.vue  SecureView.vue
src/views/auth/: LoginView.vue  RegisterView.vue
src/views/post/: PostDetailView.vue  PostsListView.vue
